crates/hird-check/tests/snapshots/inference__if_branches_unify.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn main() = if True then 1 else 2\")"
---
main : () → Int
