crates/hird-check/tests/snapshots/inference__if_condition_must_be_bool.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn main() = if 1 then 2 else 3\")"
---
main : ∀a. a
error[C0001] 15..16: type mismatch: expected `Bool`, got `Int`
