crates/hird-check/tests/snapshots/inference__if_unions_branch_effects.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"effect Log\\n\\\n         effect Fork\\n\\\n         fn f(c: Int -> Bool ! {Log}, t: Int -> Int ! {Fork}) -> Int ! {Log, Fork} =\\n\\\n           if c(0) then t(0) else 0\")"
---
f : (Int → Bool ! {Log}) → (Int → Int ! {Fork}) → Int ! {Fork, Log}
