crates/hird-check/tests/snapshots/inference__infinite_type_occurs_check.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn omega(f: a) = f(f)\")"
---
omega : ∀a. a
error[C0002] 16..21: infinite type: `c` occurs within `c → d ! {r}`
